# Skape-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Log.md  README.md  TODO.md  generate_project.ps1
Modules/: CMakeLists.txt
Modules/OpenGL_Graphics/: Build.lua  CMakeLists.txt  README.md
Modules/OpenGL_Graphics/src/Assets/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Modules/OpenGL_Graphics/src/Graphics/: Renderer.cpp  Renderer.h  Renderer_Impl.cpp  Renderer_Impl.h
Modules/OpenGL_Graphics/src/glad/: glad.c
Modules/SDL3_Wrapper/: Build.lua  README.md  module.json
Modules/SDL3_Wrapper/src/: Types.cpp  Types.h
Modules/SDL3_Wrapper/src/Input/: Gamepad.h  Gamepad_Include.h  Input_Keys.h  Keyboard.h  Keyboard_Include.h  Mouse_Include.h
Modules/SDL3_Wrapper/src/Window/: Window.cpp  Window.h  Window_OpenGL.cpp  Window_VK.cpp
Modules/Vulkan_Graphics/: Build.lua  CMakeLists.txt
Modules/Vulkan_Graphics/src/Assets/: Mesh.cpp  Mesh.h  cMesh.cpp  cMesh.h
Modules/Vulkan_Graphics/src/Graphics/: Renderer_Impl.cpp
Modules/Win64_Platform/: Build.lua  CMakeLists.txt
Modules/Win64_Platform/src/Memory/: Tracker.cpp
Modules/Win64_Platform/src/Platform/: Time.cpp  Time.h
Plugins/: CMakeLists.txt
Plugins/JoltPhysics/: Build.lua  CMakeLists.txt  plugin.json
Plugins/JoltPhysics/sk/Physics/: CMakeLists.txt  Physics_Manager.h
Plugins/JoltPhysics_Wrapper/: CMakeLists.txt
Plugins/JoltPhysics_Wrapper/sk/: CMakeLists.txt
Plugins/JoltPhysics_Wrapper/sk/Physics/: CMakeLists.txt  PhysicsLayer.cpp  PhysicsLayer.h  Physics_Manager.cpp  Physics_Manager.h
Plugins/OpenGL_Graphics/: .gitignore  CMakeLists.txt  module.json
Plugins/OpenGL_Graphics/sk/: CMakeLists.txt
Plugins/OpenGL_Graphics/sk/Assets/: CMakeLists.txt  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Plugins/OpenGL_Graphics/sk/Graphics/: CMakeLists.txt  Renderer_Impl.cpp  Renderer_Impl.h
Plugins/OpenGL_Graphics/src/: Types.h
Plugins/OpenGL_Graphics/src/Graphics/: Renderer_Impl.h
Plugins/SDL3_Wrapper/: CMakeLists.txt  module.json
Plugins/SDL3_Wrapper/sk/: CMakeLists.txt  Types.h
Plugins/SDL3_Wrapper/sk/Input/: CMakeLists.txt  Gamepad_Include.h  Keyboard_Include.h  Mouse_Include.h
Plugins/SDL3_Wrapper/sk/Window/: CMakeLists.txt  Window.cpp  Window.h  Window_OpenGL.cpp
Plugins/Vulkan_Graphics/: Build.lua  CMakeLists.txt  README.md  module.json
Plugins/Vulkan_Graphics/src/Assets/: Mesh.cpp
Plugins/Vulkan_Graphics/src/Graphics/: Renderer_Impl.h
Plugins/Win64_Platform/: Build.lua  CMakeLists.txt  README.md  module.json
Plugins/Win64_Platform/sk/: CMakeLists.txt
Plugins/Win64_Platform/sk/Memory/: CMakeLists.txt  Tracker.cpp
Plugins/Win64_Platform/sk/Platform/: CMakeLists.txt  Time.cpp
Plugins/Win64_Platform/src/: Types.h
Plugins/Win64_Platform/src/Memory/: Tracker.cpp
Runtimes/: CMakeLists.txt
Runtimes/Editor/: CMakeLists.txt
Runtimes/Editor/sk/: CMakeLists.txt  main.cpp
Runtimes/Editor/sk/Editor/: CMakeLists.txt  Editor.cpp  Editor.h
src/framework/: App.cpp  App.h  CMakeLists.txt
src/sk/: CMakeLists.txt  README.md  Skape_Main.h
src/sk/Assets/: Asset.cpp  Asset.h  CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/sk/Assets/Access/: Asset_Ptr.h  Asset_Ptr_Base.cpp  Asset_Ptr_Base.h  Asset_Raw_Ptr.cpp  Asset_Raw_Ptr.h  Asset_Ref.h  CMakeLists.txt
src/sk/Assets/Management/: Asset_Job_Manager.cpp  Asset_Job_Manager.h  Asset_Manager.cpp  Asset_Manager.h  CMakeLists.txt
src/sk/Assets/Utils/: Asset_List.cpp  Asset_List.h  CMakeLists.txt  Event.h
src/sk/Assets/Workers/: Asset_Loader.cpp  Asset_Loader.h  CMakeLists.txt  WorkerTask.h
src/sk/Containers/: Allocator.h  CMakeLists.txt  Map.h  String.h  Vector.h
src/sk/Containers/Const/: Array.h  CMakeLists.txt  Const_Map.h  Linked_Array.h  String.h
src/sk/Debugging/: CMakeLists.txt  Debugging.h
src/sk/Debugging/Macros/: Assert.h  CMakeLists.txt  Text.h
src/sk/Editor/: CMakeLists.txt  Editor.cpp  Editor.h
src/sk/Editor/Components/: CMakeLists.txt  EditorInternalComponent.h
src/sk/Editor/Managers/: CMakeLists.txt  SelectionManager.cpp  SelectionManager.h
src/sk/Editor/Tabs/: AssetViewTab.cpp  AssetViewTab.h  CMakeLists.txt  ObjectListTab.cpp  ObjectListTab.h  PlaceholderTab.cpp  PlaceholderTab.h  SceneViewportTab.cpp  SceneViewportTab.h  Tab.h
src/sk/Editor/Utils/: CMakeLists.txt  ContextMenu.cpp  ContextMenu.h
src/sk/Graphics/: CMakeLists.txt  Renderer.cpp  Renderer.h  Surface.h
src/sk/Graphics/Buffer/: Buffer.h  CMakeLists.txt  Dynamic_Buffer.h  Unsafe_Buffer_Base.h
src/sk/Graphics/Passes/: CMakeLists.txt  Forward_Pass.cpp  Forward_Pass.h  GBuffer_Pass.cpp  GBuffer_Pass.h  Light_Pass.cpp  Light_Pass.h  Screen_Pass.cpp  Screen_Pass.h
src/sk/Graphics/Pipelines/: CMakeLists.txt  Deferred_Pipeline.cpp  Deferred_Pipeline.h  Forward_Pipeline.cpp  Forward_Pipeline.h  Pipeline.cpp  Pipeline.h
src/sk/Graphics/Utils/: CMakeLists.txt  (+4 more)
src/sk/Helpers/: CMakeLists.txt  stb_image_wrapper.cpp
src/sk/Input/: CMakeLists.txt  Gamepad.h  Input.cpp  Input.h  Keyboard.h  Mouse.h
src/sk/Macros/: CMakeLists.txt  Enum_Builder.h  For_Each.h
src/sk/Math/: AABox.cpp  AABox.h  CMakeLists.txt  Math.h  Matrix.h  Matrix3x3.h  Matrix4x4.h  Matrix_helper.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  Types.cpp  Types.h  Vector2.h  Vector3.h  Vector4.h  VectorSwizzle.h
src/sk/Memory/: CMakeLists.txt  Memory.h
src/sk/Misc/: CMakeLists.txt  Counter.h  DerivedSingleton.h  Offsetof.h  Print.cpp  Singleton.h  Smart_Ptrs.h  StringID.cpp  StringID.h  UUID.cpp  UUID.h  Visitor.h
src/sk/Platform/: CMakeLists.txt  Platform_Base.h
src/sk/Reflection/: CMakeLists.txt  ClassMacros.h  ClassTest.cpp  Enum.h  Global_Registry.h  Interface.h  RuntimeClass.h  RuntimeStruct.h  Type_Hash.h  Type_Registry.h  Types.cpp  Types.h
src/sk/Scene/: CMakeLists.txt  Layer.cpp  Layer.h  Object.cpp  Object.h  Scene.cpp  Scene.h
src/sk/Seralization/: CMakeLists.txt  Seralization.cpp  Serializable.cpp  Serializable.h  SerializedObject.cpp  SerializedObject.h
src/startup/: CMakeLists.txt  main.cpp
(+321 files in other folders)
