project(SkapeEngine)

add_library(SkapeEngine)

target_link_libraries(SkapeEngine
  PUBLIC
    stb_image
    ${SKAPE_PLATFORM_PROJECT}
    ${SKAPE_GRAPHICS_PROJECT}
    ${SKAPE_PLUGINS_LINK}
)

target_include_directories(SkapeEngine INTERFACE ${ENGINE_INCLUDES})

target_sources(SkapeEngine
  PRIVATE
    sk/Assets/Access/Asset_Ptr_Base.cpp
    sk/Assets/Access/Asset_Raw_Ptr.cpp
    sk/Assets/Asset.cpp
    sk/Assets/Management/Asset_Job_Manager.cpp
    sk/Assets/Management/Asset_Manager.cpp
    sk/Assets/Material.cpp
    sk/Assets/Mesh.cpp
    sk/Assets/Model.cpp
    sk/Assets/Utils/Asset_List.cpp
    sk/Assets/Workers/Asset_Loader.cpp
    sk/Graphics/Buffer/Dynamic_Buffer.cpp
    sk/Graphics/Passes/Forward_Pass.cpp
    sk/Graphics/Passes/GBuffer_Pass.cpp
    sk/Graphics/Passes/Light_Pass.cpp
    sk/Graphics/Passes/Render_Pass.cpp
    sk/Graphics/Passes/Screen_Pass.cpp
    sk/Graphics/Pipelines/Deferred_Pipeline.cpp
    sk/Graphics/Pipelines/Forward_Pipeline.cpp
    sk/Graphics/Pipelines/Pipeline.cpp
    sk/Graphics/Renderer.cpp
    sk/Graphics/Utils/RenderUtils.cpp
    sk/Helpers/stb_image_wrapper.cpp
    sk/Input/Input.cpp
    sk/Math/Transform.cpp
    sk/Math/Types.cpp
    sk/Misc/Print.cpp
    sk/Misc/StringID.cpp
    sk/Misc/UUID.cpp
    sk/Reflection/ClassTest.cpp
    sk/Reflection/Manager/Type_Manager.cpp
    sk/Reflection/Types.cpp
    sk/Scene/Components/CameraComponent.cpp
    sk/Scene/Components/Component.cpp
    sk/Scene/Components/LightComponent.cpp
    sk/Scene/Components/MeshComponent.cpp
    sk/Scene/Components/SpinComponent.cpp
    sk/Scene/Components/TransformComponent.cpp
    sk/Scene/Managers/CameraManager.cpp
    sk/Scene/Managers/EventManager.cpp
    sk/Scene/Managers/Internal_Component_Manager.cpp
    sk/Scene/Managers/Layer_Manager.cpp
    sk/Scene/Managers/Light_Manager.cpp
    sk/Scene/Managers/SceneManager.cpp
    sk/Scene/Object.cpp
    sk/Scene/Objects/Camera.cpp
    sk/Scene/Objects/CameraFlight.cpp
    sk/Scene/Scene.cpp
    sk/Seralization/Seralization.cpp
    sk/Seralization/Serializable.cpp
    sk/Seralization/SerializedObject.cpp

  PUBLIC
    FILE_SET engineIncludes
    TYPE HEADERS
    FILES
      sk/Assets/Access/Asset_Ptr.h
      sk/Assets/Access/Asset_Ptr_Base.h
      sk/Assets/Access/Asset_Raw_Ptr.h
      sk/Assets/Access/Asset_Ref.h
      sk/Assets/Asset.h
      sk/Assets/Management/Asset_Job_Manager.h
      sk/Assets/Management/Asset_Manager.h
      sk/Assets/Material.h
      sk/Assets/Mesh.h
      sk/Assets/Model.h
      sk/Assets/Utils/Asset_List.h
      sk/Assets/Utils/Event.h
      sk/Assets/Workers/Asset_Loader.h
      sk/Assets/Workers/WorkerTask.h
      sk/Containers/Allocator.h
      sk/Containers/Const/Array.h
      sk/Containers/Const/Const_Map.h
      sk/Containers/Const/Const_Wrapper.h
      sk/Containers/Const/Linked_Array.h
      sk/Containers/Const/String.h
      sk/Containers/Map.h
      sk/Containers/String.h
      sk/Containers/Vector.h
      sk/Debugging/Debugging.h
      sk/Debugging/Macros/Assert.h
      sk/Debugging/Macros/Text.h
      sk/Debugging/Macros/Warning.h
      sk/Debugging/Severity.h
      sk/Graphics/Buffer/Buffer.h
      sk/Graphics/Buffer/Dynamic_Buffer.h
      sk/Graphics/Buffer/Unsafe_Buffer_Base.h
      sk/Graphics/Passes/Forward_Pass.h
      sk/Graphics/Passes/GBuffer_Pass.h
      sk/Graphics/Passes/Light_Pass.h
      sk/Graphics/Passes/Render_Pass.h
      sk/Graphics/Passes/Screen_Pass.h
      sk/Graphics/Pipelines/Deferred_Pipeline.h
      sk/Graphics/Pipelines/Forward_Pipeline.h
      sk/Graphics/Pipelines/Pipeline.h
      sk/Graphics/Renderer.h
      sk/Graphics/Utils/RenderUtils.h
      sk/Input/Gamepad.h
      sk/Input/Input.h
      sk/Input/Keyboard.h
      sk/Input/Mouse.h
      sk/Macros/Enum_Builder.h
      sk/Macros/For_Each.h
      sk/Macros/Manipulation.h
      sk/Math/Math.h
      sk/Math/Matrix.h
      sk/Math/Matrix3x3.h
      sk/Math/Matrix4x4.h
      sk/Math/Matrix_helper.h
      sk/Math/Transform.h
      sk/Math/Types.h
      sk/Math/Vector.h
      sk/Math/Vector2.h
      sk/Math/Vector3.h
      sk/Math/Vector4.h
      sk/Math/VectorSwizzle.h
      sk/Memory/Memory.h
      sk/Memory/Tracker/Tracker.h
      sk/Misc/Concepts.h
      sk/Misc/Counter.h
      sk/Misc/DerivedSingleton.h
      sk/Misc/Hashing.h
      sk/Misc/Offsetof.h
      sk/Misc/Print.h
      sk/Misc/Singleton.h
      sk/Misc/Smart_Ptrs.h
      sk/Misc/StringID.h
      sk/Misc/UUID.h
      sk/Platform/Platform_Base.h
      sk/Platform/Time.h
      sk/Platform/Window/Window_Base.h
      sk/Reflection/ClassMacros.h
      sk/Reflection/Enum.h
      sk/Reflection/Global_Registry.h
      sk/Reflection/Interface.h
      sk/Reflection/Manager/Type_Manager.h
      sk/Reflection/RuntimeClass.h
      sk/Reflection/RuntimeStruct.h
      sk/Reflection/Type_Hash.h
      sk/Reflection/Type_Registry.h
      sk/Reflection/Types.h
      sk/Scene/Components/CameraComponent.h
      sk/Scene/Components/Component.h
      sk/Scene/Components/Internal/Layer_Component.h
      sk/Scene/Components/LightComponent.h
      sk/Scene/Components/MeshComponent.h
      sk/Scene/Components/SpinComponent.h
      sk/Scene/Components/TransformComponent.h
      sk/Scene/Managers/CameraManager.h
      sk/Scene/Managers/EventManager.h
      sk/Scene/Managers/Internal_Component_Manager.h
      sk/Scene/Managers/Layer_Manager.h
      sk/Scene/Managers/Light_Manager.h
      sk/Scene/Managers/SceneManager.h
      sk/Scene/Object.h
      sk/Scene/Objects/Camera.h
      sk/Scene/Objects/CameraFlight.h
      sk/Scene/Scene.h
      sk/Seralization/Seralization.h
      sk/Seralization/Serializable.h
      sk/Seralization/SerializedObject.h
      sk/Skape_Main.h
)

