
# TODO: Only add to target if it's gonna build the Editor runtime.

list(FIND SKAPE_RUNTIMES_BUILD "Editor" EditorIndex)
if(EditorIndex GREATER -1)
    target_sources(SkapeEngine
        PRIVATE
            Editor.cpp

        PUBLIC
        FILE_SET engineIncludes
        TYPE HEADERS
        FILES
            Editor.h
    )

    add_subdirectory(Tabs)
endif()
